<resources>
    <string name="app_name">Linear Lights Out</string>
    <string name="action_settings">Settings</string>

    <!--MainActivty-->
    <string name="main_title">Linear Lights Out</string>
    <string name="play_start">Play with 7 buttons</string>
    <string name="play_format">Play with %d buttons</string>
    <string name="change_num_buttons">Change number of buttons</string>
    <string name="about">About Linear Lights Out</string>
    <string name="exit">Exit</string>

    <!--LightsOutActivty-->
    <string name="game_start">Make the buttons match</string>
    <string name="game_one_move">1 move taken so far</string>
    <string name="game_format">%1$d moves taken so far</string>
    <string name="you_win">You won!</string>
    <string name="you_won_one_move">You won in 1 move!</string>
    <string name="you_won_format">You won in %1$d moves!</string>
    <string name="button_zero">0</string>
    <string name="button_one">1</string>
    <string name="button_new_game">New Game</string>
    <string name="title_activity_lights_out">LightsOutActivity</string>

    <!--AboutActivity-->
    <string name="about_description">Clicking a button toggles the state of that button and any neighboring buttons. The goal is to make all the buttons match.</string>
    <string name="title_activity_about">AboutActivity</string>

    <!--ChangeButtonsActivity-->
    <string name="radio_label_3">3 Buttons</string>
    <string name="radio_label_5">5 Buttons</string>
    <string name="radio_label_7">7 Buttons</string>
    <string name="radio_label_9">9 Buttons</string>
    <string name="title_activity_change_buttons">ChangeButtons</string>

    <string name="hello_world">Hello world!</string>
</resources>
